# svea

./: .gitignore  .gitmodules  404.html  Dockerfile  Documentation.md  LICENSE  PR_description.md  README.md  analysis.ipynb  entrypoint  index.html  kitware-archive.sh  mkdocs.yml  new_sml.pgm  new_sml.yaml  objects.inv  outdoor_localization.md  requirements.txt  set_gps_rules.sh  test.py  zensical.toml
src/mpc_ca/: CMakeLists.txt  package.xml  requirements.txt  setup.py
src/mpc_ca/config/: obstacles.yaml  planner.yaml
src/mpc_ca/launch/: planner.launch
src/mpc_ca/rviz/: obstacle_sandbox.rviz
src/mpc_ca/scripts/: run_planner.py
src/mpc_ca/src/map/: occupancy_grid.py  ros_interface.py
src/mpc_ca/src/planner/: main_planner.py  mpc.py  ros_interface.py  utils.py
src/rsu_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
src/rsu_msgs/msg/: Object.msg  ObjectPose.msg  StampedObjectPoseArray.msg
src/svea_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/svea_core/_launch/: lli_test.xml  plot_map.xml
src/svea_core/launch/: floor2.launch  key_teleop.launch  lli.xml  lli_test.launch  lli_test.launch.py  map_and_foxglove.launch.py  map_and_foxglove.xml  multi_svea.launch  plot_map.launch  pure_pursuit.launch  save_map.launch  save_map.xml  simulation.launch.py  simulation.xml  state_publisher.launch  state_publisher_launch.py  state_publisher_launch.xml  svea.launch.py  svea.xml  svea_launch.xml  svea_vizualization.launch.py  visualization.launch.py  visualization.xml
src/svea_core/launch/core_examples/: floor2.launch  itrl.launch
src/svea_core/launch/platooning_examples/: c_ovrv_example.launch
src/svea_core/maps/: floor2.pgm  floor2.pickle  floor2.yaml  itrl.yaml  itrl_sidewalk.yaml  map.yaml  new_sml.pgm  new_sml.yaml  penn_state_lab.pgm  penn_state_lab.yaml  q1.pgm  sidewalk.yaml  sml.pgm  sml.yaml
src/svea_core/meshes/: body.stl  lidar_base.stl  lidar_cap.stl  lidar_top.stl  tire.stl
src/svea_core/params/: floor2_obstacles.yaml  mavros.yaml  mavros_pluginlists.yaml  mpc_circle.yaml  mpc_default.yaml  mpc_default_path_tracking.yaml  mpc_params.yaml  penn_state_lab_obstacles.yaml  track.yaml  zenoh.json5
src/svea_core/resources/maps/: q1.yaml
src/svea_core/resources/params/: obstacles.yaml  track.yaml
src/svea_core/resources/rviz/: SVEA_floor2.rviz
src/svea_core/rviz/: SVEA_floor2.rviz  c_ovrv.rviz  navsat.rviz
src/svea_core/script/: state_publisher.py
src/svea_core/scripts/: encoder_filter.py  imu_bias_remover.py  lidar_timer.py  lli_test.py  model_viz.py  plot_map.py  px4_uorb_tunnel.py  save_map.py  sim_lidar.py  sim_svea.py  state_publisher.py
src/svea_core/scripts/core_examples/: floor2_example.py  keyboard.py  multi.py  pure_pursuit.py
src/svea_core/scripts/platooning_examples/: c_ovrv_example.py  c_ovrv_utils.py
src/svea_core/scripts/tests/: lli_test.py
src/svea_core/scripts/util/: map_plt.py  obstacles_builder_gui.py  pickle_map.py
src/svea_core/src/svea/: actuation.py  data.py  helpers.py  localizers.py  sensors.py  states.py  track.py
src/svea_core/src/svea_core/: data.py  sensors.py  states.py
src/svea_core/svea_core/: __init__.py  data.py  rosonic.py  sensors.py  states.py  svea_core.py
src/svea_core/svea_core/controllers/: __init__.py  mpc.py  pure_pursuit.py
src/svea_core/svea_core/interfaces/: __init__.py  actuation.py  lidar.py  localization.py  marker.py  path.py  planner_interface.py  rc.py
src/svea_core/svea_core/models/: __init__.py  bicycle.py  platooning.py
src/svea_core/svea_core/utils/: path.py  (+4 more)
src/svea_core/tests/: c_ovrv.test
src/svea_core/urdf/: svea.urdf.xacro  svea.urdf.xml
src/svea_core/util/: obstacles_builder_gui.py  start_micro_ros.sh
src/svea_localization/: package.xml  setup.cfg  setup.py
src/svea_localization/launch/: _localization_debugger.launch.py  _slam.launch.py  launch_test.xml  localization.launch.py  localization.py  localization.xml  localization_debugger.xml  localize.xml  slam.py  slam.xml  slam_and_bag.xml  slam_from_bag.xml  transforms.launch.py  transforms.xml  transforms_ns.xml
src/svea_localization/script/: actuation_to_twist.py  gps_to_utm_relay.py  odom_to_path_relay.py  plot_localization.py  quat_to_euler_relay.py  rtk_manager.py  set_datum_node.py
src/svea_localization/scripts/: lidar_timestamp.py  odom_to_path_relay.py  quat_to_euler_relay.py
src/svea_msgs/: CMakeLists.txt  package.xml
src/svea_msgs/msg/: LLIEmergency.msg  LLIEncoder.msg  VehicleState.msg  lli_ctrl.msg
src/svea_sensors/: .gitignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  grant_hardware_permisions.sh  package.xml  setup.py
src/svea_sensors/launch/: camera.launch  default_odometry.launch  detect_aruco.launch  get_aruco_utm.launch  localization_debugger.launch  localization_test.launch  localize.launch  localize_static.launch  nats_connector.launch  nats_connector_static.launch  nats_connector_svea.launch  navsat.launch  navsat_static.launch  outdoor_auto.launch  pedestrian_demo.launch  rs_odometry.launch  rs_odometry_static.launch  rtk.launch  rtk_localize.launch  rtk_navsat.launch  rviz.launch  show_map.launch  slam.launch  slam_and_bag.launch  slam_from_bag.launch  transforms.launch  transforms_static.launch  wheel_odometry.launch  xavier_odometry.launch  zed_odometry.launch
src/svea_sensors/maps/: itrl.pgm
src/svea_sensors/scripts/: actuation_to_twist.py  aruco_detect.py  aruco_pose.py  fixedframestate.py  generate_waypoint.py  gps_to_utm_relay.py  latlong_to_xy.py  odom_pub.py  odom_to_path_relay.py  odometry_corrected.py  pedestrian_location.py  plot.py  plot_from_csv.py  plot_localization.py  publish_rsu_msg.py  quat_to_euler_relay.py  reference_gps_frame.py  rtk_manager.py  rtk_receiver_manager.py  set_datum.py  set_datum_node.py  static_svea_pose.py  test_wp3go.py  tf_listener.py  wheel_encoder_reader.py
src/svea_sensors/src/: bno055_i2c_activity.cpp  bno055_i2c_node.cpp  odom_to_map_node.cpp  speed_coefficient_estimation.cpp  speed_telemetry.cpp
src/svea_sensors/urdf/: zed.urdf  zedm.urdf
src/svea_sensors/util/: grant_hardware_permisions.sh
(+343 files in other folders)
