<?xml version="1.0"?>
<package format="2">
  <name>rsu_msgs</name>
  <version>0.1.0</version>
  <description>The rsu_msgs package</description>

  <maintainer email="kajarf@kth.se">Kaj Munhoz Arfvidss</maintainer>

  <license>MIT</license>

  <url type="website">https://svea.eecs.kth.se</url>

  <author email="kajarf@kth.se">Kaj Munhoz Arfvidss</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export></export>
</package>
