<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>svea_core</name>
  <version>0.0.0</version>
  <description>SVEA Core Package</description>
  <maintainer email="kajarf@kth.se">Kaj Munhoz Arfvidsson</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>robot_localization</depend>
  <depend>rclpy</depend>
  <!-- <depend>rosserial_msgs</depend> -->
  <!-- <depend>rosserial_python</depend> -->
  <depend>python3-yaml</depend>
  <depend>std_msgs</depend>
  <depend>foxglove_bridge</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
