<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>svea_core</name>
  <version>0.0.0</version>
  <description>SVEA Core Package</description>
  <maintainer email="kajarf@kth.se">Kaj Munhoz Arfvidsson</maintainer>
  <license>TODO: License declaration</license>

  <depend>foxglove_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-yaml</depend>
  <depend>rclpy</depend>
  <depend>robot_localization</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>std_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>visualization_msgs</depend>
  <depend>xacro</depend>

  <depend>svea_localization</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
