<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>svea_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lic2@kth.se">rosuser</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>realsense2_camera</depend>
  <depend>robot_localization</depend>
  <depend>svea_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>ntrip_client</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <!-- <exec_depend>slam_toolbox_msgs</exec_depend> -->
  <exec_depend>svea_core</exec_depend>
  <exec_depend>urg_node</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
