<?xml version="1.0"?>
<package format="2">
  <name>svea_sensors</name>
  <version>0.0.0</version>
  <description>The svea_sensors package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="kajarf@kth.se">Kaj Munhoz Arfvidsson</maintainer>

  <license>MIT</license>

  <author email="tbolin@kth.se">Tobias Bolin</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robot_localization</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>svea_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>realsense2_camera</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rosserial_server</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>slam_toolbox_msgs</exec_depend>
  <exec_depend>svea_core</exec_depend>
  <exec_depend>urg_node</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
