<?xml version="1.0"?>
<package format="2">
  <name>svea_sensors</name>
  <version>0.0.0</version>
  <description>The svea_sensors package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="frankji@kth.se">Frank Jiang</maintainer>
  <maintainer email="kajarf@kth.se">Kaj Munhoz Arfvidsson</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">https://github.com/KTH-SML/svea</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="tbolin@kth.se">Tobias Bolin</author>
  <author email="frankji@kth.se">Frank Jiang</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>realsense2_camera</depend>
  <depend>robot_localization</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rosserial_msgs</depend>
  <depend>rosserial_python</depend>
  <depend>svea_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
  <depend>ntrip_client</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>slam_toolbox_msgs</exec_depend>
  <exec_depend>svea_core</exec_depend>
  <exec_depend>urg_node</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
